--- a/atv-test/app/views/atv/_sequence.html.erb
+++ b/atv-test/app/views/atv/_sequence.html.erb
@@ -5,7 +5,8 @@
   <span id="quotient" data-atv-divider-target="quotient" data-atv-multiplier-target="factor">0</span> *
   <input type="number" value="6" data-atv-multiplier-target="factor"></input>)  = 
   <span id="result" data-atv-multiplier-target="product">0</span>
-  <button id="f-button" data-atv-actions="click->divider#divide, click->multiplier#multiply">
+  <button id="f-button" data-atv-actions="click->divider#divide, mouseover->multiplier#blur, click->multiplier#multiply">
     Calculate
   </button>
+  <span id="multi-out" data-atv-multiplier-target="extra">0</span>
 </div>
