--- a/atv-test/app/views/atv/_sequence.html.erb
+++ b/atv-test/app/views/atv/_sequence.html.erb
@@ -2,8 +2,8 @@
 <div data-atv-controller="divider, multiplier">
   (<input type="number" value="12" data-atv-divider-target="dividend"></input> /
   <input id="divisor" type="number" value="3" data-atv-divider-target="divisor"></input>) =
-  <span id="quotient" data-atv-divider-target="quotient" data-atv-multiplier-target="factor">0</span> *
-  <input type="number" value="6" data-atv-multiplier-target="factor"></input>)  = 
+  <span id="quotient" data-atv-divider-target="quotient" data-atv-multiplier-target="aFactor">0</span> *
+  <input type="number" value="6" data-atv-multiplier-target="aFactor"></input>)  = 
   <span id="result" data-atv-multiplier-target="product">0</span>
   <button id="f-button" data-atv-actions="click->divider#divide, mouseover->multiplier#blur, click->multiplier#multiply">
     Calculate
